--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
- <h1> hello world </h1>
- <p>"call me ishmael"</p>
- <title>  a whale of greeting </title>
- 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>A whale of a greeting</title>
+  </head>
+  <body>
+    <h1>hello, world</h1>
+    <p>Call me Ishmael.</p>
+    <img src="images/breaching_whale.jpg">
+  </body>
+</html>
