--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>About</h1>
+    <a href="https://mayurshrivastava1407.github.io/website/">Go back</a>
     <p>
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
